fix overflow

--- a/src/components/popup/popup.less
+++ b/src/components/popup/popup.less
@@ -31,7 +31,6 @@
 	position: relative;
 
 	@media @smartphone {
-		width: 90%;
 		height: 90%;
 	}
 }
